# lang

./: CMakeLists.txt  run.sh
examples/: bad.lg  branch.lg  comments.lg  declarations.lg  fibonacci.lg  func_decl.lg  hello.lg  loop.lg  scope.lg  stdin.lg  struct.lg  types.lg
src/: ast.cc  ast.h  codegen.cc  codegen.h  ir.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  scope.h  strings.cc  strings.h  tokens.cc  tokens.h  translation.cc  translation.h  typecheck.cc  typecheck.h  types.cc  types.h  value_ptr.h  variant_helpers.h
